; ModuleID = '/home/carl/AnghaBench/disque/src/extr_server.c_lookupCommandByCString.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_server.c_lookupCommandByCString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.serverCommand = type { i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.serverCommand* @lookupCommandByCString(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.serverCommand*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @sdsnew(i8* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.serverCommand* @dictFetchValue(i32 %7, i32 %8)
  store %struct.serverCommand* %9, %struct.serverCommand** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @sdsfree(i32 %10)
  %12 = load %struct.serverCommand*, %struct.serverCommand** %3, align 8
  ret %struct.serverCommand* %12
}

declare dso_local i32 @sdsnew(i8*) #1

declare dso_local %struct.serverCommand* @dictFetchValue(i32, i32) #1

declare dso_local i32 @sdsfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
